MINOR: Parametrization